// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/router-base-ee render base route data snap 1`] = `
[
  {
    "element": <div>
      home
    </div>,
    "key": "home",
    "path": "/",
  },
  {
    "element": <div>
      userCenter
    </div>,
    "key": "userCenter",
    "path": "user-center",
  },
  {
    "element": <div>
      system
    </div>,
    "key": "system",
    "path": "system",
  },
  {
    "element": <div>
      cloudBeaver
    </div>,
    "key": "cloudBeaver",
    "path": "cloud-beaver",
  },
  {
    "element": <div>
      account
    </div>,
    "key": "account",
    "path": "account",
  },
  {
    "children": [
      {
        "element": <div>
          projectList
        </div>,
        "key": "projectList",
        "path": "",
      },
      {
        "element": <div>
          projectImport
        </div>,
        "key": "projectImport",
        "path": "import",
      },
    ],
    "key": "project",
    "path": "project",
  },
  {
    "children": [
      {
        "element": <div>
          member
        </div>,
        "key": "member",
        "path": ":projectID/member",
      },
      {
        "children": [
          {
            "element": <div>
              dataSourceList
            </div>,
            "key": "dataSourceList",
            "path": "",
          },
          {
            "element": <div>
              dataSourceCreate
            </div>,
            "key": "dataSourceCreate",
            "path": "create",
          },
          {
            "element": <div>
              dataSourceUpdate
            </div>,
            "key": "dataSourceUpdate",
            "path": "update/:dbServiceUid",
          },
        ],
        "element": <div
          data-test-parent-id="dataSource"
        >
          <Outlet />
        </div>,
        "key": "dataSource",
        "path": ":projectID/db-services",
      },
      {
        "children": [
          {
            "element": <div>
              syncDataSourceList
            </div>,
            "key": "syncDataSourceList",
            "path": "",
          },
          {
            "element": <div>
              syncDataSourceCreate
            </div>,
            "key": "syncDataSourceCreate",
            "path": "create",
          },
          {
            "element": <div>
              syncDataSourceUpdate
            </div>,
            "key": "syncDataSourceUpdate",
            "path": "update/:taskId",
          },
        ],
        "element": <div
          data-test-parent-id="syncDataSource"
        >
          <Outlet />
        </div>,
        "key": "syncDataSource",
        "path": ":projectID/sync-data-source",
      },
      {
        "children": [
          {
            "element": <div>
              dataExportManagement
            </div>,
            "key": "dataExportManagement",
            "path": "",
          },
          {
            "element": <div>
              CreateExportTask
            </div>,
            "key": "CreateExportTask",
            "path": "create",
          },
          {
            "element": <div>
              ExportTaskDetail
            </div>,
            "key": "ExportTaskDetail",
            "path": ":workflowID",
          },
        ],
        "element": <div
          data-test-parent-id="dataExportManagement"
        >
          <Outlet />
        </div>,
        "key": "dataExportManagement",
        "path": ":projectID/data/export",
      },
      {
        "element": <div>
          dataMaskRuleOverview
        </div>,
        "key": "dataMaskRuleOverview",
        "path": ":projectID/data-mask-rule-overview",
      },
    ],
    "element": <UNDEFINED />,
    "key": "projectDetail",
    "path": "project/*",
  },
]
`;

exports[`base/router-base-ee render base router when version is ce render router account 1`] = `
<body>
  <div>
    <div>
      account
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router cloud-beaver 1`] = `
<body>
  <div>
    <div>
      cloudBeaver
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router home 1`] = `
<body>
  <div>
    <div>
      home
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router project render route dataSourceCreate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataSource"
    >
      <div>
        dataSourceCreate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router project render route dataSourceList 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataSource"
    >
      <div>
        dataSourceList
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router project render route dataSourceUpdate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataSource"
    >
      <div>
        dataSourceUpdate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router project render route member 1`] = `
<body>
  <div>
    <div>
      member
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router system 1`] = `
<body>
  <div>
    <div>
      system
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ce render router user-center 1`] = `
<body>
  <div>
    <div>
      userCenter
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route dataExportManagement render route CreateExportTask 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataExportManagement"
    >
      <div>
        CreateExportTask
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route dataExportManagement render route ExportTaskDetail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataExportManagement"
    >
      <div>
        ExportTaskDetail
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route dataExportManagement render route dataExportManagement 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataExportManagement"
    >
      <div>
        dataExportManagement
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route project render router import project 1`] = `
<body>
  <div>
    <div>
      projectImport
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route project render router project list 1`] = `
<body>
  <div>
    <div>
      projectList
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route syncDataSource render route syncDataSourceList 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="syncDataSource"
    >
      <div>
        syncDataSourceList
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route syncDataSource render route syncDataSourceList 2`] = `
<body>
  <div>
    <div
      data-test-parent-id="syncDataSource"
    >
      <div>
        syncDataSourceCreate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ee render base router when version is ee render route syncDataSource render route syncDataSourceList 3`] = `
<body>
  <div>
    <div
      data-test-parent-id="syncDataSource"
    >
      <div>
        syncDataSourceUpdate
      </div>
    </div>
  </div>
</body>
`;
